About page--fixed issues on small screen and responsive too

--- a/css/about-central-body.css
+++ b/css/about-central-body.css
@@ -1,19 +1,22 @@
+@import url("css-variables.css");
+
 * {
   box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
   font-family: 'Raleway', sans-serif;
 }
 
 #carouselExampleFade {
-  margin-bottom: 10px;  
+  margin-bottom: 10px;
 }
 
 .carousel .carousel-item {
-  position: relative; /*  Carousel behind */
-  top: 80px;
+  position: relative;
+  /*  Carousel behind */
+  top: 0px;
+  padding-top: 0px;
+  width: 100%;
   height: 600px;
-  z-index: -2;
+  z-index: -1px;
 }
 
 .carousel .carousel-item active {
@@ -39,13 +42,15 @@
 }
 
 .container .title h1 {
-  font-size: 40px;
+  font-size: 50px;
   color: rgba(48, 92, 117, 0.47);
+  font-family: 'Allura', 'Neonderthaw', cursive;
+  font-weight: 600;
 }
 
 .container .title h1::after {
   content: "";
-  height: 1.5px;
+  height: 1px;
   width: 500px;
   background-color: maroon;
   border-radius: 25px;
@@ -96,6 +101,10 @@
 
 .timings h2 {
   text-align: center;
+  font-weight: 600;
+  font-family: 'Allura', 'Neonderthaw', cursive;
+  color: rgba(48, 92, 117, 0.47);
+  font-size: 40px;
 
 }
 
@@ -110,16 +119,39 @@
 
 }
 
-.container .address {
+.find {
+  text-align: center;
+  margin-top: 8%;
+  font-weight: 600;
+  font-family: 'Allura', 'Neonderthaw', cursive;
+  color: rgba(48, 92, 117, 0.47);
+  font-size: 30px;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.address {
   font-size: 20px;
   background-color: rgba(48, 92, 117, 0.47);
   color: white;
   height: 405px;
   border-style: solid;
   border-left-width: 15px;
-  margin-top: 39px;
   padding: 60px;
 
+}
+
+.newsletter h4{
+  font-family: 'Allura', 'Neonderthaw', cursive;
+  color: rgba(48, 92, 117, 0.47);
+  font-size: 30px;
+  font-weight: 600;
 }
 
 .newsletter p {
@@ -142,7 +174,14 @@
 
 }
 
-.container .fa {
+.social h5{
+  font-family: 'Allura', 'Neonderthaw', cursive;
+  color: rgba(48, 92, 117, 0.47);
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.social .fa {
   padding: 10px;
   font-size: 15px;
   width: 35px;
@@ -152,16 +191,16 @@
   border-radius: 50%;
 }
 
-.container .fa:hover {
+.social .fa:hover {
   opacity: 0.7;
 }
 
-.container .fa-facebook {
+.social .fa-facebook {
   background: #3B5998;
   color: white;
 }
 
-.container .fa-twitter {
+.social .fa-twitter {
   background: #55ACEE;
   color: white;
 }
