--- a/css/events.css
+++ b/css/events.css
@@ -1,5 +1,16 @@
 @import url("css-variables.css");
 
+/* body {
+  background-image: url('../images/events/swapnil-dwivedi-mK2fnT6frE0-unsplash.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin-left: 20%;
+  top: 50px;
+} */
+/* 
+html {
+  height: 100%
+} */
 * {
   margin: 0;
   padding: 0;
